[gd_scene load_steps=3 format=3 uid="uid://dif7lcsvcfeeq"]

[ext_resource type="Script" path="res://scripts/select_event_screen.gd" id="1_cfvfg"]
[ext_resource type="PackedScene" uid="uid://ctu5cq48qgh3c" path="res://scenes/event_option.tscn" id="1_qa7pj"]

[node name="EventScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cfvfg")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.941176)

[node name="ShowEffect" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="ShowEffect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -702.0
offset_top = -310.0
offset_right = 770.0
offset_bottom = 281.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="ShowEffect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 326.0
offset_top = -276.0
offset_right = -246.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Un hombre en su casa descubre la realidad del planeta y esa misma tarde…

Manoli: Antonio va, ve a pasear, ya sabes que el médico…

Antonio: MANOLI CÓMO VOY A IR A PASEAR??! Es que no te has enterado de la verdad??? La tierra es plana si salgo a caminar podría caerme!

Manoli: Y donde está el problema… Así te da el aire…

Antonio: *surprised Pikachu Face*"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Button" type="Button" parent="ShowEffect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -295.0
offset_top = 215.0
offset_right = -140.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
text = "Aceptar"
text_overrun_behavior = 4

[node name="Button2" type="Button" parent="ShowEffect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 25.0
offset_top = 215.0
offset_right = 331.0
offset_bottom = 248.0
grow_horizontal = 2
grow_vertical = 2
text = "No quiero!"
text_overrun_behavior = 4

[node name="Option1" parent="." instance=ExtResource("1_qa7pj")]
layout_mode = 1
offset_left = 251.0
offset_right = -1138.0

[node name="Option2" parent="." instance=ExtResource("1_qa7pj")]
layout_mode = 1
offset_left = 1067.0
offset_right = -322.0

[connection signal="pressed" from="ShowEffect/Button" to="." method="_on_effect_result_button_pressed"]
[connection signal="pressed" from="ShowEffect/Button2" to="." method="_on_button_2_pressed"]
[connection signal="selected" from="Option1" to="." method="_on_event_1_pressed"]
[connection signal="selected" from="Option2" to="." method="_on_event_2_pressed"]
